# PRISM

./: CLAUDE.md  CMakeLists.txt  package.xml  readme.md
config/: multi_camera_extrinsic_calibration.yaml  multi_camera_intrinsic_calibration.yaml  prism_params.yaml
docs/: PRISM_PRD.md  architecture.md  interpolation_integration.md  package_structure.md  performance_optimization.md  projection_color_mapping.md  프롬프트.md
include/prism/core/: calibration_manager.hpp  execution_mode.hpp  memory_pool.hpp  point_cloud_soa.hpp
include/prism/interpolation/: beam_altitude_manager.hpp  catmull_rom_interpolator.hpp  interpolation_engine.hpp  simd_kernels.hpp
include/prism/nodes/: projection_debug_node.hpp
include/prism/projection/: color_extractor.hpp  multi_camera_fusion.hpp  projection_engine.hpp  projection_types.hpp
include/prism/utils/: common_types.hpp
launch/: prism.launch.py  projection_debug.launch.py
src/: execution_mode.cpp
src/core/: calibration_manager.cpp  memory_pool.cpp  point_cloud_soa.cpp
src/interpolation/: beam_altitude_manager.cpp  catmull_rom_interpolator.cpp  interpolation_engine.cpp  simd_kernels.cpp
src/nodes/: prism_color_node.cpp  prism_fusion_node.cpp  prism_interpolation_node.cpp  projection_debug_node.cpp
src/projection/: color_extractor.cpp  multi_camera_fusion.cpp  projection_engine.cpp
test/unit/: test_calibration_manager.cpp  test_execution_mode.cpp  test_interpolation_engine.cpp  test_memory_pool.cpp  test_projection_engine.cpp  test_simple_projection.cpp
