<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prism</name>
  <version>1.0.0</version>
  <description>Point-cloud and RGB Integrated Sensing Module - High-performance LiDAR-camera fusion engine</description>
  <maintainer email="kikiws70@gmail.com">PRISM Development Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  
  <!-- Computer vision and image processing -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- System dependencies for third-party libraries -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <depend>eigen</depend>
  
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>
  
  <build_depend>libtbb-dev</build_depend>
  <exec_depend>libtbb-dev</exec_depend>
  
  <build_depend>libyaml-cpp-dev</build_depend>
  <exec_depend>libyaml-cpp-dev</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
